Fix horizontal scroll issue on mobile

--- a/11ty-src/assets/css/_core.css
+++ b/11ty-src/assets/css/_core.css
@@ -3,10 +3,6 @@ html {
   padding: 10px;
 }
 
-#container {
-  width: 100%;
-}
-
 /* typography */
 
 h1, h2, h3, h4, h5, h6, strong, th {
