--- a/11ty-src/assets/css/bundle.css
+++ b/11ty-src/assets/css/bundle.css
@@ -12,6 +12,7 @@ html {
   margin: 10px auto;
   max-width: 600px;
   padding: 15px;
+  width: calc(100% - 30px);
 }
 
 ul#links li a {
